--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -2,7 +2,7 @@ name: deploy to github container
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   docker:
     runs-on: ubuntu-latest
