--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -24,5 +24,5 @@ jobs:
       with:
         file: dockerfile
         push: true
-        tags: ghcr.io/mari0theminer/Hackathon_2024_HN_TEAM-input-api:latest, ghcr.io/mari0theminer/Hackathon_2024_HN_TEAM-input-api:${{ github.run_number }}
+        tags: ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest, ghcr.io/mari0theminer/mari0theminer/hackathon_2024_hn_team-input-api::${{ github.run_number }}
               
