--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4.1.7
-    - run: ls
+    - run: cd inputAPI
     - name: 'Login to GitHub Container Registry'
       uses: docker/login-action@v1
       with:
