--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -1,30 +1,37 @@
 name: deploy to github container
+
 on:
   push:
     branches:
       - master
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v4.1.7
-    - run: cd inputAPI
-    - name: 'Login to GitHub Container Registry'
-      uses: docker/login-action@v1
-      with:
-        registry: ghcr.io
-        username: ${{github.actor}}
-        password: ${{secrets.GITHUB_TOKEN}}
-        
-    - name: Build and push Docker images
-      uses: docker/build-push-action@v6.7.0
-      with:
-        context: ./inputAPI
-        file: ./dockerfile
-        push: true
-        tags: ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest, ghcr.io/mari0theminer/mari0theminer/hackathon_2024_hn_team-input-api:${{ github.run_number }}
-              
+      - name: Checkout
+        uses: actions/checkout@v4.1.7
+
+      # The 'cd inputAPI' step is not needed because we specify the context in the Docker build step
+      # - run: cd inputAPI
+
+      - name: 'Login to GitHub Container Registry'
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v2 # Update to v2 since v6.7.0 does not exist
+        with:
+          context: ./inputAPI
+          file: ./inputAPI/Dockerfile # Correct the path to the Dockerfile
+          push: true
+          tags: |
+            ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
+            ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:${{ github.run_number }} # Corrected the tag format
