--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2 # Update to v2 since v6.7.0 does not exist
         with:
-          context: ./inputAPI
+          context: ./inputAPI/.
           file: ./inputAPI/Dockerfile 
           push: true
           tags: |
