--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -26,8 +26,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          context: ./inputAPI # The directory containing the Dockerfile
-          file: Dockerfile # Simplified path to Dockerfile since context is already set
+          working-directory:: ./inputAPI
           push: true
           tags: |
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
