--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -11,7 +11,10 @@ jobs:
     permissions:
       contents: read
       packages: write
-
+    defaults:
+      run:
+        shell: bash
+        working-directory: ./inputAPI
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.7
@@ -26,7 +29,6 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
-          working-directory:: ./inputAPI
           push: true
           tags: |
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
