--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -25,7 +25,7 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          
+      - run: ls -la    
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
