--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -30,6 +30,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
+          file: Dockerfile
           tags: |
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:${{ github.run_number }}
