--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -17,7 +17,7 @@ jobs:
         working-directory: ./inputAPI
     steps:
       - name: Checkout
-        uses: actions/checkout@v4.1.7
+        uses: actions/checkout@@v6.9.0
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
@@ -28,6 +28,7 @@ jobs:
       - name: Build and push Docker images
         uses: docker/build-push-action@v2
         with:
+          context: .
           push: true
           tags: |
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
