--- a/.github/workflows/container-deploy-input-api.yml
+++ b/.github/workflows/container-deploy-input-api.yml
@@ -17,7 +17,7 @@ jobs:
         working-directory: ./inputAPI
     steps:
       - name: Checkout
-        uses: actions/checkout@@v6.9.0
+        uses: actions/checkout@v4.2.2
       - name: 'Login to GitHub Container Registry'
         uses: docker/login-action@v1
         with:
@@ -26,9 +26,8 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - run: ls -la    
       - name: Build and push Docker images
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v6.9.0
         with:
-          context: .
           push: true
           tags: |
             ghcr.io/mari0theminer/hackathon_2024_hn_team-input-api:latest
